--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,7 @@ testem.log
 /typings
 src/testing-ignore/file.ts
 src/testing-ignore/ciao.txt
+src/environment/environment.ts
 
 # System Files
 .DS_Store
